[gd_scene load_steps=17 format=2]

[ext_resource path="res://source/simulation/grow_context_full.gd" type="Script" id=1]
[ext_resource path="res://source/simulation/gui/CameraPan.gd" type="Script" id=2]
[ext_resource path="res://source/simulation/gui/godot_theme.tres" type="Theme" id=3]
[ext_resource path="res://source/simulation/gui/PresetsButton.gd" type="Script" id=4]
[ext_resource path="res://source/simulation/gui/CameraZoom.gd" type="Script" id=5]
[ext_resource path="res://source/simulation/gui/Camera2D.gd" type="Script" id=6]
[ext_resource path="res://source/simulation/gui/PauseButton.gd" type="Script" id=7]
[ext_resource path="res://source/simulation/gui/FinishIterationButton.gd" type="Script" id=8]
[ext_resource path="res://source/simulation/gui/LeavesValue.gd" type="Script" id=9]
[ext_resource path="res://source/simulation/gui/FruitsValue.gd" type="Script" id=10]
[ext_resource path="res://source/simulation/gui/StemValue.gd" type="Script" id=11]
[ext_resource path="res://source/simulation/gui/GrowSimulationTimer.gd" type="Script" id=12]
[ext_resource path="res://source/simulation/gui/CurrentIterationValue.gd" type="Script" id=13]
[ext_resource path="res://source/simulation/gui/CurrentSymbolValue.gd" type="Script" id=14]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

render_mode unshaded;

//void vertex() {
//	VERTEX = vec2(VERTEX.x + TIME * 10.0, VERTEX.y);
//}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="Node2D" type="Node2D"]

[node name="BackgroundRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0.392157, 0.678431, 0.772549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraPan" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="CameraZoom" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 640, 360 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="PlantCanvas" type="Node2D" parent="ViewportContainer/Viewport"]
material = SubResource( 2 )
script = ExtResource( 1 )
dynamic_line_width = false

[node name="Timer" type="Timer" parent="ViewportContainer/Viewport/PlantCanvas"]
wait_time = 0.1
autostart = true
script = ExtResource( 12 )

[node name="GrowthStartPosition" type="Position2D" parent="ViewportContainer/Viewport/PlantCanvas"]
position = Vector2( 320, 300 )
__meta__ = {
"_gizmo_extents_": 35.3
}

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport"]
show_behind_parent = true
position = Vector2( 320, 180 )
current = true
script = ExtResource( 6 )

[node name="GUI" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indented" type="Control" parent="GUI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 350.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="GridContainer" parent="GUI/Indented"]
margin_right = 118.0
margin_bottom = 86.0
mouse_filter = 2
custom_constants/vseparation = -6
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentIterationLabel" type="Label" parent="GUI/Indented/StatsContainer"]
margin_right = 106.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Iteration:"

[node name="CurrentIterationValue" type="Label" parent="GUI/Indented/StatsContainer"]
margin_left = 110.0
margin_right = 118.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 13 )

[node name="CurrentSymbolLabel" type="Label" parent="GUI/Indented/StatsContainer"]
margin_top = 16.0
margin_right = 106.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Symbol:"

[node name="CurrentSymbolValue" type="Label" parent="GUI/Indented/StatsContainer"]
margin_left = 110.0
margin_top = 16.0
margin_right = 118.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 14 )

[node name="FruitsLabel" type="Label" parent="GUI/Indented/StatsContainer"]
margin_top = 32.0
margin_right = 106.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fruits:"

[node name="FruitsValue" type="Label" parent="GUI/Indented/StatsContainer"]
margin_left = 110.0
margin_top = 32.0
margin_right = 118.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 10 )

[node name="LeavesLabel" type="Label" parent="GUI/Indented/StatsContainer"]
margin_top = 48.0
margin_right = 106.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Leaves:"

[node name="LeavesValue" type="Label" parent="GUI/Indented/StatsContainer"]
margin_left = 110.0
margin_top = 48.0
margin_right = 118.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 9 )

[node name="StemLabel" type="Label" parent="GUI/Indented/StatsContainer"]
margin_top = 64.0
margin_right = 106.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Line segments:"

[node name="StemValue" type="Label" parent="GUI/Indented/StatsContainer"]
margin_left = 110.0
margin_top = 64.0
margin_right = 118.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 11 )

[node name="CosmeticsContainer" type="GridContainer" parent="GUI/Indented"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_right = 210.0
grow_vertical = 0
mouse_filter = 2
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruitColorPicker" type="ColorPickerButton" parent="GUI/Indented/CosmeticsContainer"]
margin_right = 40.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
mouse_filter = 1
toggle_mode = false
color = Color( 0.972549, 0.956863, 0.52549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruitRadiusSlider" type="HSlider" parent="GUI/Indented/CosmeticsContainer"]
margin_left = 50.0
margin_top = 7.0
margin_right = 210.0
margin_bottom = 23.0
rect_min_size = Vector2( 160, 0 )
size_flags_vertical = 4
max_value = 8.0
step = 0.5
value = 3.0
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeavesColorPicker" type="ColorPickerButton" parent="GUI/Indented/CosmeticsContainer"]
margin_top = 40.0
margin_right = 40.0
margin_bottom = 70.0
rect_min_size = Vector2( 40, 30 )
mouse_filter = 1
toggle_mode = false
color = Color( 0.992157, 0.427451, 0.729412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeafRadiusSlider" type="HSlider" parent="GUI/Indented/CosmeticsContainer"]
margin_left = 50.0
margin_top = 47.0
margin_right = 210.0
margin_bottom = 63.0
rect_min_size = Vector2( 160, 0 )
mouse_filter = 1
size_flags_vertical = 4
max_value = 8.0
step = 0.5
value = 2.0
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StemColorPicker" type="ColorPickerButton" parent="GUI/Indented/CosmeticsContainer"]
margin_top = 80.0
margin_right = 40.0
margin_bottom = 110.0
rect_min_size = Vector2( 40, 30 )
mouse_filter = 1
toggle_mode = false
color = Color( 0.933333, 0.803922, 0.596078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StemThicknessSlider" type="HSlider" parent="GUI/Indented/CosmeticsContainer"]
margin_left = 50.0
margin_top = 87.0
margin_right = 210.0
margin_bottom = 103.0
rect_min_size = Vector2( 160, 0 )
mouse_filter = 1
size_flags_vertical = 4
min_value = 0.1
max_value = 10.0
step = 0.1
value = 2.9
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsContainer" type="HBoxContainer" parent="GUI/Indented"]
margin_left = 240.0
margin_right = 580.0
margin_bottom = 22.0
grow_horizontal = 0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresetsButton" type="OptionButton" parent="GUI/Indented/ControlsContainer"]
margin_right = 86.0
margin_bottom = 22.0
grow_horizontal = 0
size_flags_horizontal = 10
text = "L System"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditButton" type="Button" parent="GUI/Indented/ControlsContainer"]
margin_left = 87.0
margin_right = 135.0
margin_bottom = 22.0
text = "Edit..."

[node name="PlayButton" type="Button" parent="GUI/Indented/ControlsContainer"]
margin_left = 136.0
margin_right = 193.0
margin_bottom = 22.0
toggle_mode = true
pressed = true
text = "Playing"
script = ExtResource( 7 )

[node name="FinishIterationButton" type="Button" parent="GUI/Indented/ControlsContainer"]
margin_left = 194.0
margin_right = 236.0
margin_bottom = 22.0
text = "Next"
script = ExtResource( 8 )

[node name="ResetButton" type="Button" parent="GUI/Indented/ControlsContainer"]
margin_left = 237.0
margin_right = 285.0
margin_bottom = 22.0
text = "Reset"

[node name="FocusOriginButton" type="Button" parent="GUI/Indented/ControlsContainer"]
margin_left = 286.0
margin_right = 340.0
margin_bottom = 22.0
text = "Center"

[node name="ZoomVScrollBar" type="VScrollBar" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 360.0
rect_min_size = Vector2( 40, 360 )
mouse_filter = 1
size_flags_horizontal = 1
min_value = 0.1
max_value = 10.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="camera_panning" from="CameraPan" to="ViewportContainer/Viewport/Camera2D" method="_on_camera_panning"]
[connection signal="camera_zooming" from="CameraZoom" to="ViewportContainer/Viewport/Camera2D" method="_on_camera_zooming"]
[connection signal="focus_camera" from="ViewportContainer/Viewport/PlantCanvas" to="ViewportContainer/Viewport/Camera2D" method="_on_focus_camera"]
[connection signal="iterations_reset" from="ViewportContainer/Viewport/PlantCanvas" to="GUI/Indented/ControlsContainer/FinishIterationButton" method="_on_iterations_reset"]
[connection signal="iterations_reset" from="ViewportContainer/Viewport/PlantCanvas" to="GUI/Indented/ControlsContainer/PlayButton" method="_on_iterations_reset"]
[connection signal="max_iteration_reached" from="ViewportContainer/Viewport/PlantCanvas" to="GUI/Indented/ControlsContainer/FinishIterationButton" method="_on_max_iteration_reached"]
[connection signal="max_iteration_reached" from="ViewportContainer/Viewport/PlantCanvas" to="GUI/Indented/ControlsContainer/PlayButton" method="_on_max_iteration_reached"]
[connection signal="update_current_iteration" from="ViewportContainer/Viewport/PlantCanvas" to="GUI/Indented/StatsContainer/CurrentIterationValue" method="_on_update_current_iteration"]
[connection signal="update_current_symbol" from="ViewportContainer/Viewport/PlantCanvas" to="GUI/Indented/StatsContainer/CurrentSymbolValue" method="_on_update_current_symbol"]
[connection signal="update_fruits" from="ViewportContainer/Viewport/PlantCanvas" to="GUI/Indented/StatsContainer/FruitsValue" method="_on_update_fruits"]
[connection signal="update_leaves" from="ViewportContainer/Viewport/PlantCanvas" to="GUI/Indented/StatsContainer/LeavesValue" method="_on_update_leaves"]
[connection signal="update_line_segments" from="ViewportContainer/Viewport/PlantCanvas" to="GUI/Indented/StatsContainer/StemValue" method="_on_update_line_segments"]
[connection signal="timeout" from="ViewportContainer/Viewport/PlantCanvas/Timer" to="ViewportContainer/Viewport/PlantCanvas" method="_on_Timer_timeout"]
[connection signal="color_changed" from="GUI/Indented/CosmeticsContainer/FruitColorPicker" to="ViewportContainer/Viewport/PlantCanvas" method="_on_FruitColorPickerButton_color_changed"]
[connection signal="value_changed" from="GUI/Indented/CosmeticsContainer/FruitRadiusSlider" to="ViewportContainer/Viewport/PlantCanvas" method="_on_FruitRadiusSlider_value_changed"]
[connection signal="color_changed" from="GUI/Indented/CosmeticsContainer/LeavesColorPicker" to="ViewportContainer/Viewport/PlantCanvas" method="_on_LeavesColorPickerButton_color_changed"]
[connection signal="value_changed" from="GUI/Indented/CosmeticsContainer/LeafRadiusSlider" to="ViewportContainer/Viewport/PlantCanvas" method="_on_LeafRadiusSlider_value_changed"]
[connection signal="color_changed" from="GUI/Indented/CosmeticsContainer/StemColorPicker" to="ViewportContainer/Viewport/PlantCanvas" method="_on_StemColorPickerButton_color_changed"]
[connection signal="value_changed" from="GUI/Indented/CosmeticsContainer/StemThicknessSlider" to="ViewportContainer/Viewport/PlantCanvas" method="_on_StemThicknessSlider_value_changed"]
[connection signal="item_selected" from="GUI/Indented/ControlsContainer/PresetsButton" to="GUI/Indented/ControlsContainer/PresetsButton" method="_on_item_selected"]
[connection signal="preset_selected" from="GUI/Indented/ControlsContainer/PresetsButton" to="ViewportContainer/Viewport/PlantCanvas" method="_on_preset_selected"]
[connection signal="button_up" from="GUI/Indented/ControlsContainer/EditButton" to="ViewportContainer/Viewport/PlantCanvas" method="_on_EditButton_button_up"]
[connection signal="toggled" from="GUI/Indented/ControlsContainer/PlayButton" to="ViewportContainer/Viewport/PlantCanvas/Timer" method="_on_PlayButton_toggled"]
[connection signal="toggled" from="GUI/Indented/ControlsContainer/PlayButton" to="GUI/Indented/ControlsContainer/PlayButton" method="_on_PlayButton_toggled"]
[connection signal="button_up" from="GUI/Indented/ControlsContainer/FinishIterationButton" to="GUI/Indented/ControlsContainer/PlayButton" method="_on_FinishIterationButton_button_up"]
[connection signal="button_up" from="GUI/Indented/ControlsContainer/FinishIterationButton" to="ViewportContainer/Viewport/PlantCanvas" method="_on_FinishIteration"]
[connection signal="button_up" from="GUI/Indented/ControlsContainer/ResetButton" to="ViewportContainer/Viewport/PlantCanvas" method="_on_ResetButton_button_up"]
[connection signal="button_up" from="GUI/Indented/ControlsContainer/FocusOriginButton" to="ViewportContainer/Viewport/PlantCanvas" method="_on_FocusOriginButton_button_up"]
[connection signal="value_changed" from="GUI/ZoomVScrollBar" to="ViewportContainer/Viewport/Camera2D" method="_on_ZoomScrollBar_value_changed"]
